--- a/RF_Go/Components/MainTab.razor
+++ b/RF_Go/Components/MainTab.razor
@@ -10,97 +10,41 @@
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
 
-<h1>Devices Selection</h1>
-<MudButton Variant="Variant.Filled" Color="Color.Primary" class="btn btn-primary" @onclick="RFCalcul">Calculate</MudButton>
-<MudButton Variant="Variant.Filled" Color="Color.Secondary" class="btn btn-primary" @onclick="() => DevicesViewModel.DeleteAllDeviceAsync()">Delete All Device</MudButton>
-<div id="SelectDeviceMenu">
-        <MudGrid Spacing="2" Justify="Justify.Center">
-                <MudItem>
-                    <MudSelect T="string" HelperText="Choose device brand" Placeholder="Please Select"
-                       AdornmentIcon="@Icons.Material.Filled.LaptopMac" AdornmentColor="Color.Primary" Value="@Device.Brand" ValueChanged="@((string e) => OnBrandChanged(e))">
-                        @foreach (var brand in DeviceData.Brands.Keys)
-                        {
-                            <MudSelectItem T="string" value="@brand">@brand</MudSelectItem>
-                        }
-                    </MudSelect>
-                </MudItem>
-                <MudItem>
-                    <MudSelect T="string" HelperText="Choose device model" Placeholder="Please Select"
-                               AdornmentIcon="@Icons.Material.Filled.WifiChannel" AdornmentColor="Color.Primary" Value="@Device.Model" ValueChanged="@((string e) => OnModelChanged(e))">
-                        <option value="" disabled selected hidden>Choose a model...</option>
-                        @if (Device.Brand is null)
-                        {
-                            <MudSelectItem T="string">Choose a brand first</MudSelectItem>
-                        }
-                        else
-                        {
-                                @foreach (var model in DeviceData.Brands[Device.Brand].Keys)
-                                {
-                                    <MudSelectItem T="string" value="@model">@model</MudSelectItem>
-                                }
-                        }
-                    </MudSelect>
-                </MudItem>
-                <MudItem>
-                    <MudSelect T="string" HelperText="Choose device frequency" Placeholder="Please Select"
-                               AdornmentIcon="@Icons.Material.Filled.Fastfood" AdornmentColor="Color.Primary" @bind-Value="Device.Frequency" >
-                        @if (Device.Model == "" || Device.Model is null)
-                        {
-                            <MudSelectItem T="string">Choose a model first</MudSelectItem>
-                        }
-                        else
-                        {
-                            @foreach (var frequency in DeviceData.Brands[Device.Brand][Device.Model].Keys)
-                            {
-                                <MudSelectItem T="string" value="@frequency">@frequency ( @DeviceData.Brands[Device.Brand][Device.Model][frequency][0] - @DeviceData.Brands[Device.Brand][Device.Model][frequency][1] )</MudSelectItem>
-                            }
-                        }
-                    </MudSelect>
-                </MudItem>
-                <MudItem>
-                    <MudSelect HelperText="Choose device frequency" Placeholder="Please Select" AdornmentColor="Color.Primary"
-                               @bind-Value="@selectedQuantity">
-                            @foreach (var option in frequencyOptions)
-                            {
-                                <MudSelectItem T="int" value="@option">@option</MudSelectItem>
-                            }
-                    </MudSelect>
-                </MudItem>
-
-                <MudButton @onclick="() => SaveDeviceInDB(Device)">Save device</MudButton>
-        </MudGrid>
-</div>
-
-                @if (DevicesViewModel.Devices.Count == 0)
-                {
-                    <MudAlert Severity="Severity.Info" Variant="Variant.Filled">No devices found</MudAlert>
-                }
-                else
-                {
-    <MudTable class="mainTable" Hover="true" Dense="true" Bordered="false" Striped="true" HorizontalScrollbar="true" @bind-Items="DevicesViewModel.Devices" @ref="mudTable"
+        @if (DevicesViewModel.Devices.Count == 0)
+        {
+            <MudAlert Severity="Severity.Info" Variant="Variant.Filled">No devices found</MudAlert>
+        }
+        else
+        {
+    <MudTable class="" Hover="true" Dense="true" Bordered="false" Striped="false" HorizontalScrollbar="true" @bind-Items="DevicesViewModel.Devices" @ref="mudTable"
               RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc">
         <ToolBarContent>
+
+            <div class="d-flex align-center justify-start">
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="btn btn-primary" @onclick="RFCalcul">Calculate</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Secondary" Class="btn btn-primary" @onclick="DeleteAll">Delete All Devices</MudButton>
+            </div>
+
             <MudText Typo="Typo.h6">Devices</MudText>
+
             <MudSpacer />
             <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         </ToolBarContent>
         <HeaderContent>
-            <MudTh>ID</MudTh>
-            <MudTh>Brand</MudTh>
-            <MudTh>Model</MudTh>
-            <MudTh>Frequency</MudTh>
+            <MudTh>Device</MudTh>
             <MudTh>Set Frequencies</MudTh>
-            <MudTh>Stage</MudTh>
-            <MudTh>Calendar</MudTh>
             <MudTh>Inclusion Group</MudTh>
-            <MudTh>IP Address</MudTh>
-            <MudTd>Edit</MudTd>
         </HeaderContent>
         <RowTemplate>
-            <MudTd>@context.ID</MudTd>
-                <MudTd>@context.Brand</MudTd>
-                <MudTd>@context.Model</MudTd>
-                <MudTd>@context.Frequency - @GetFrequencyDetails(context)</MudTd>
+                <MudTd>
+                    <div class="d-flex flex-column">
+                        <p>@context.Brand - @context.Model</p>
+                        
+                        <p>@context.ID - @context.Name</p>
+                        <p>@context.Frequency - @GetFrequencyDetails(context)</p>
+                        <p>@(context.IpAddress != null ? context.IpAddress : "No ip-address")</p>
+                    </div>
+                </MudTd>
                 @* <MudTd>@SetGetNumberOfChannels(context)</MudTd> *@
                 <MudTd Style="min-width:250px">
                     <MudTable @bind-Items="@context.Channels" Hover="true">
@@ -108,16 +52,13 @@
 
                             @*  <MudTd>@string.Format("{0:#,0}", chan.Frequency) </MudTd> *@
 
-                            <MudTd Style="@CalculateStyle(chan)">
-                                <MudNumericField @bind-Value="chan.Frequency" Min="@chan.Range[0]" Max="@chan.Range[1]" Step="@chan.Step" />
-                                <MudCheckBox Label="Lock" Value="@chan.IsLocked"></MudCheckBox>
-
+                        <MudTd Class="d-flex align-center mt-0">
+                            <MudNumericField @bind-Value="chan.Frequency" Min="@chan.Range[0]" Max="@chan.Range[1]" Step="@chan.Step" Style="@CalculateStyle(chan)" Class="mt-0" Label="Frequency" Variant="Variant.Outlined" />
+                                <MudCheckBox Color="Color.Secondary" CheckedIcon="@Icons.Material.Filled.Favorite" UncheckedIcon="@Icons.Material.Filled.FavoriteBorder" Value="@chan.IsLocked"></MudCheckBox>
                             </MudTd>
                         </RowTemplate>
                     </MudTable>
                 </MudTd>
-                <MudTd>@context.Stage</MudTd>
-                <MudTd>@context.Calendar</MudTd>
                 <MudTd>
                     <MudSelect T="int" Value="context.GroupID" ValueChanged="(newGroupId) => GroupsViewModel.UpdateDeviceGroupAsync(context, newGroupId)">
                         @foreach (var group in GroupsViewModel.Groups)
@@ -125,11 +66,10 @@
                             <MudSelectItem Value="@group.ID">@group.Name</MudSelectItem>
                         }
                     </MudSelect>
-                </MudTd>
-                <MudTd>@context.IpAddress</MudTd>
-                <MudTd>
-                    <MudButton Color=Color.Primary class="edit-button">Edit</MudButton>
-                    <MudButton Color=Color.Secondary class="delete-button" @onclick="() => DevicesViewModel.DeleteDeviceAsync(context.ID)">Del</MudButton>
+                    <div class="d-flex">
+                        <MudButton Color=Color.Primary class="edit-button">Edit</MudButton>
+                        <MudButton Color=Color.Secondary class="delete-button" @onclick="() => DevicesViewModel.DeleteDeviceAsync(context.ID)">Del</MudButton>
+                    </div>
                 </MudTd>
             </RowTemplate>
             <PagerContent>
@@ -143,6 +83,7 @@
         [Parameter] public DevicesViewModel DevicesViewModel { get; set; }
         [Parameter] public GroupsViewModel GroupsViewModel { get; set; }
         [Parameter] public DeviceData DeviceData { get; set; }
+        [Parameter] public EventCallback OnDeviceSaved { get; set; }
 
         private RFDevice Device => DevicesViewModel.OperatingDevice;
         private string searchString1 = "";
@@ -150,10 +91,12 @@
         private int selectedRowNumber = -1;
         private bool selectAll { get; set; }
         private List<string> clickedEvents = new();
+    
+
         private string CalculateStyle(RFChannel chan)
         {
             string color = chan.Checked ? "lightgreen" : "red";
-            return "background-color:" + color;
+        return "color:" + color + "; align-self: center; ";
         }
         private string SelectedRowClassFunc(RFDevice device, int rowNumber)
         {
@@ -241,46 +184,45 @@
         {
             isAddingDevice = true;
         }
-        private void RFCalcul()
+    private async Task RFCalcul()
+    {
+        var overlappingGroups = FindOverlappingGroups();
+        foreach (var groupSet in overlappingGroups)
         {
-            var overlappingGroups = FindOverlappingGroups();
-            foreach (var groupSet in overlappingGroups)
+            HashSet<int> UsedFrequencies = new HashSet<int>();
+            HashSet<int> TwoTX3rdOrder = new HashSet<int>();
+            HashSet<int> TwoTX5rdOrder = new HashSet<int>();
+            HashSet<int> TwoTX7rdOrder = new HashSet<int>();
+            HashSet<int> TwoTX9rdOrder = new HashSet<int>();
+            HashSet<int> ThreeTX3rdOrder = new HashSet<int>();
+
+            var devicesInGroup = GetDevicesForGroupSet(groupSet);
+
+            // First pass: lock frequencies
+            foreach (RFDevice device in devicesInGroup)
             {
-                HashSet<int> UsedFrequencies = new HashSet<int>();
-                HashSet<int> TwoTX3rdOrder = new HashSet<int>();
-                HashSet<int> TwoTX5rdOrder = new HashSet<int>();
-                HashSet<int> TwoTX7rdOrder = new HashSet<int>();
-                HashSet<int> TwoTX9rdOrder = new HashSet<int>();
-                HashSet<int> ThreeTX3rdOrder = new HashSet<int>();
-
-                var devicesInGroup = GetDevicesForGroupSet(groupSet);
-
-                // First pass: lock frequencies
-                foreach (RFDevice device in devicesInGroup)
+                foreach (RFChannel chan in device.Channels)
                 {
-                    foreach (RFChannel chan in device.Channels)
+                    chan.Checked = false;
+                    if (chan.IsLocked)
                     {
-                        chan.Checked = false;
-                        if (chan.IsLocked)
-                        {
-                            Debug.WriteLine("We are checking: " + chan.Frequency);
-                            chan.SetRandomFrequency(UsedFrequencies, TwoTX3rdOrder, TwoTX5rdOrder, TwoTX7rdOrder, TwoTX9rdOrder, ThreeTX3rdOrder);
-                        }
-                    }
-                }
-
-                Debug.WriteLine("Getting out of calcul of locked freq");
-
-                // Second pass: assign frequencies to unlocked channels
-                foreach (RFDevice device in devicesInGroup)
-                {
-                    foreach (RFChannel chan in device.Channels)
-                    {
+                        Debug.WriteLine("We are checking: " + chan.Frequency);
                         chan.SetRandomFrequency(UsedFrequencies, TwoTX3rdOrder, TwoTX5rdOrder, TwoTX7rdOrder, TwoTX9rdOrder, ThreeTX3rdOrder);
                     }
                 }
             }
+
+            // Second pass: assign frequencies to unlocked channels
+            foreach (RFDevice device in devicesInGroup)
+            {
+                foreach (RFChannel chan in device.Channels)
+                {
+                    chan.SetRandomFrequency(UsedFrequencies, TwoTX3rdOrder, TwoTX5rdOrder, TwoTX7rdOrder, TwoTX9rdOrder, ThreeTX3rdOrder);
+                }
+            }
+            await OnDeviceSaved.InvokeAsync();
         }
+    }
     private List<RFDevice> GetDevicesForGroupSet(List<RFGroup> groupSet)
     {
         var groupIds = groupSet.Select(g => g.ID).ToList();
@@ -337,19 +279,9 @@
         return period1.StartTime < period2.EndTime && period1.EndTime > period2.StartTime;
     }
 
-        private void OnBrandChanged(string e)
-        {
-            Debug.WriteLine("Brand changed");
-            Device.Brand = e;
-            Device.Model = string.Empty; 
-            Device.Frequency = string.Empty; 
-            StateHasChanged(); 
-        }
-
-        private void OnModelChanged(string e)
-        {
-            Device.Model = e;
-            Device.Frequency = string.Empty;
-            StateHasChanged();
-        }
+    private async Task DeleteAll()
+    {
+        await DevicesViewModel.DeleteAllDeviceAsync();
+        await OnDeviceSaved.InvokeAsync();
+    }
     }
