--- a/RF_Go/Pages/Index.razor
+++ b/RF_Go/Pages/Index.razor
@@ -15,11 +15,27 @@
 @inject DevicesViewModel DevicesViewModel
 @inject GroupsViewModel GroupsViewModel
 
-<MudTabs KeepPanelsAlive="true" Elevation="4" Centered="true" Rounded="false" AlwaysShowScrollButtons="true" Color="@Color.Info" Class="flex justify-content-around">
+<MudTabs KeepPanelsAlive="true" Elevation="4" Centered="true" Rounded="false" AlwaysShowScrollButtons="true" Class="flex justify-content-around">
         <MudTabPanel Text="Devices" ID='"devices_tab"'>
             <MudText>
-                    <MainTab DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
-                    <SlidersSpacers DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
+
+                <MudGrid Spacing="1">
+                    <MudItem xs="12" md="3">
+                            <MudPaper Class="mt-4">
+                                <DeviceSelection DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
+                           </MudPaper>
+                    </MudItem>
+                    <MudItem xs="12" md="6">
+                        <MudPaper Class="mt-4">
+                        <MainTab DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" OnDeviceSaved="RefreshComponents" />
+                        </MudPaper>
+                    </MudItem>
+                    <MudItem xs="12" md="3">
+                        <MudPaper Class="mt-4">
+                        <SlidersSpacers DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />
+                        </MudPaper>
+                    </MudItem>
+                </MudGrid>
                     <RFGroupsLayout DeviceData="deviceData" DevicesViewModel="DevicesViewModel" GroupsViewModel="GroupsViewModel" />"
             </MudText>
         </MudTabPanel>
@@ -50,6 +66,12 @@
     public List<ChartSeries> Series { get; set; } = new();
     public string[] XAxisLabels => Enumerable.Range(100000, 1000000).Select(x => x.ToString()).ToArray();
 
+    private void RefreshComponents()
+    {
+        StateHasChanged();  
+    }
+
+
     private bool EnableSpacingInChannels(string brand, string model, string frequency, int spacing)
     {
         return true;
@@ -79,13 +101,6 @@
         deviceData = JsonConvert.DeserializeObject<DeviceData>(json);
         await DevicesViewModel.LoadDevicesAsync();
         await base.OnInitializedAsync();
-        //var timer = new Timer(async _ =>
-        //{
-        //    await InvokeAsync(() =>
-        //    {
-         //       StateHasChanged();
-           // });
-        //}, null, TimeSpan.Zero, TimeSpan.FromSeconds(1));
     }
 
 }
