--- a/RF_Go/Components/MainTab.razor
+++ b/RF_Go/Components/MainTab.razor
@@ -16,17 +16,28 @@
         }
         else
         {
+    <div class="d-flex pl-6 pr-6 w-100 align-center justify-space-between">
+        <!-- Title on the left -->
+        <div class="flex-none d-flex">
+            <MudText Typo="Typo.h5" Class="">Devices</MudText>
+        </div>
+
+        <!-- Buttons on the right -->
+        <div class="">
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mx-2" @onclick="RFCalcul">
+                Calculate
+            </MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Secondary" Class="mx-2" @onclick="DeleteAll">
+                Delete All Devices
+            </MudButton>
+        </div>
+    </div>
+
+
+    
     <MudTable class="" Hover="true" Dense="true" Bordered="false" Striped="false" HorizontalScrollbar="true" @bind-Items="DevicesViewModel.Devices" @ref="mudTable"
               RowClass="cursor-pointer" RowClassFunc="@SelectedRowClassFunc">
         <ToolBarContent>
-
-            <div class="d-flex align-center justify-start">
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="btn btn-primary" @onclick="RFCalcul">Calculate</MudButton>
-                <MudButton Variant="Variant.Filled" Color="Color.Secondary" Class="btn btn-primary" @onclick="DeleteAll">Delete All Devices</MudButton>
-            </div>
-
-            <MudText Typo="Typo.h6">Devices</MudText>
-
             <MudSpacer />
             <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         </ToolBarContent>
@@ -52,9 +63,9 @@
 
                             @*  <MudTd>@string.Format("{0:#,0}", chan.Frequency) </MudTd> *@
 
-                        <MudTd Class="d-flex align-center mt-0">
-                            <MudNumericField @bind-Value="chan.Frequency" Min="@chan.Range[0]" Max="@chan.Range[1]" Step="@chan.Step" Style="@CalculateStyle(chan)" Class="mt-0" Label="Frequency" Variant="Variant.Outlined" />
-                                <MudCheckBox Color="Color.Secondary" CheckedIcon="@Icons.Material.Filled.Favorite" UncheckedIcon="@Icons.Material.Filled.FavoriteBorder" Value="@chan.IsLocked"></MudCheckBox>
+                            <MudTd Class="d-flex align-center mt-0">
+                                <MudNumericField @bind-Value="chan.Frequency" Min="@chan.Range[0]" Max="@chan.Range[1]" Step="@chan.Step" Style="@CalculateStyle(chan)" Class="mt-0" Label="Frequency" Variant="Variant.Outlined" />
+                                    <MudCheckBox @bind-Value="chan.IsLocked" Color="Color.Secondary" CheckedIcon="@Icons.Material.Filled.Favorite" UncheckedIcon="@Icons.Material.Filled.FavoriteBorder"></MudCheckBox>
                             </MudTd>
                         </RowTemplate>
                     </MudTable>
@@ -79,111 +90,111 @@
         }
 
     @code 
+{
+    [Parameter] public DevicesViewModel DevicesViewModel { get; set; }
+    [Parameter] public GroupsViewModel GroupsViewModel { get; set; }
+    [Parameter] public DeviceData DeviceData { get; set; }
+    [Parameter] public EventCallback OnDeviceSaved { get; set; }
+
+    private RFDevice Device => DevicesViewModel.OperatingDevice;
+    private string searchString1 = "";
+    private MudTable<RFDevice> mudTable;
+    private int selectedRowNumber = -1;
+    private bool selectAll { get; set; }
+    private List<string> clickedEvents = new();
+
+
+    private string CalculateStyle(RFChannel chan)
     {
-        [Parameter] public DevicesViewModel DevicesViewModel { get; set; }
-        [Parameter] public GroupsViewModel GroupsViewModel { get; set; }
-        [Parameter] public DeviceData DeviceData { get; set; }
-        [Parameter] public EventCallback OnDeviceSaved { get; set; }
-
-        private RFDevice Device => DevicesViewModel.OperatingDevice;
-        private string searchString1 = "";
-        private MudTable<RFDevice> mudTable;
-        private int selectedRowNumber = -1;
-        private bool selectAll { get; set; }
-        private List<string> clickedEvents = new();
-    
-
-        private string CalculateStyle(RFChannel chan)
-        {
-            string color = chan.Checked ? "lightgreen" : "red";
+        string color = chan.Checked ? "lightgreen" : "red";
         return "color:" + color + "; align-self: center; ";
+    }
+    private string SelectedRowClassFunc(RFDevice device, int rowNumber)
+    {
+        if (selectedRowNumber == rowNumber)
+        {
+            selectedRowNumber = -1;
+            clickedEvents.Add("Selected Row: None");
+            return string.Empty;
         }
-        private string SelectedRowClassFunc(RFDevice device, int rowNumber)
+        else if (mudTable.SelectedItem != null && mudTable.SelectedItem.Equals(device))
         {
-            if (selectedRowNumber == rowNumber)
-            {
-                selectedRowNumber = -1;
-                clickedEvents.Add("Selected Row: None");
-                return string.Empty;
-            }
-            else if (mudTable.SelectedItem != null && mudTable.SelectedItem.Equals(device))
-            {
-                selectedRowNumber = rowNumber;
-                clickedEvents.Add($"Selected Row: {rowNumber}");
-                return "selected";
-            }
-            else
-            {
-                return string.Empty;
-            }
+            selectedRowNumber = rowNumber;
+            clickedEvents.Add($"Selected Row: {rowNumber}");
+            return "selected";
         }
-        private string GetFrequencyDetails(RFDevice context)
+        else
         {
-            int startRange = DeviceData.Brands[context.Brand][context.Model][context.Frequency][0];
-            int endRange = DeviceData.Brands[context.Brand][context.Model][context.Frequency][1];
-            return $"{startRange:#,0} - {endRange:#,0}";
+            return string.Empty;
         }
-        protected override async Task OnInitializedAsync()
-        {
-            await DevicesViewModel.LoadDevicesAsync();
-            await GroupsViewModel.LoadGroupsAsync();
-            await base.OnInitializedAsync();
-        }        private bool isAddingDevice = false;
-        private int selectedQuantity = 1;
-        private List<int> frequencyOptions = Enumerable.Range(1, 99).ToList();
-        private async Task SaveDeviceInDB(RFDevice device)
-        {
-            SaveDataDevicesInfo(device);
-            SaveDataChannelsInfo(device);
+    }
+    private string GetFrequencyDetails(RFDevice context)
+    {
+        int startRange = DeviceData.Brands[context.Brand][context.Model][context.Frequency][0];
+        int endRange = DeviceData.Brands[context.Brand][context.Model][context.Frequency][1];
+        return $"{startRange:#,0} - {endRange:#,0}";
+    }
+    protected override async Task OnInitializedAsync()
+    {
+        await DevicesViewModel.LoadDevicesAsync();
+        await GroupsViewModel.LoadGroupsAsync();
+        await base.OnInitializedAsync();
+    }        private bool isAddingDevice = false;
+    private int selectedQuantity = 1;
+    private List<int> frequencyOptions = Enumerable.Range(1, 99).ToList();
+    private async Task SaveDeviceInDB(RFDevice device)
+    {
+        SaveDataDevicesInfo(device);
+        SaveDataChannelsInfo(device);
 
-            for (int i = 0; i < selectedQuantity; i++)
-            {
-                await DevicesViewModel.SaveDeviceAsync();
-            }
-
-            await DevicesViewModel.LoadDevicesAsync();
-            StateHasChanged();
-        }
-        private void DeleteDevice(RFDevice context)
+        for (int i = 0; i < selectedQuantity; i++)
         {
-            DevicesViewModel.SetOperatingDevice(context);
+            await DevicesViewModel.SaveDeviceAsync();
         }
 
-        private void SaveDataDevicesInfo(RFDevice device)
+        await DevicesViewModel.LoadDevicesAsync();
+        StateHasChanged();
+    }
+    private void DeleteDevice(RFDevice context)
+    {
+        DevicesViewModel.SetOperatingDevice(context);
+    }
+
+    private void SaveDataDevicesInfo(RFDevice device)
+    {
+        Debug.WriteLine("SaveDataDevice is called");
+        device.Range = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
+        device.Step = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][3];
+        device.NumberOfChannels = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][2];
+        Debug.WriteLine(device.NumberOfChannels);
+        device.Channels = new List<RFChannel>();
+        for (int i = 0; i < device.NumberOfChannels; i++)
         {
-            Debug.WriteLine("SaveDataDevice is called");
-            device.Range = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
-            device.Step = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][3];
-            device.NumberOfChannels = (int)DeviceData.Brands[device.Brand][device.Model][device.Frequency][2];
-            Debug.WriteLine(device.NumberOfChannels);
-            device.Channels = new List<RFChannel>();
-            for (int i = 0; i < device.NumberOfChannels; i++)
-            {
-                device.Channels.Add(new RFChannel());
-                Debug.WriteLine("Channel created");
-            }
+            device.Channels.Add(new RFChannel());
+            Debug.WriteLine("Channel created");
         }
-        private void SaveDataChannelsInfo(RFDevice device)
+    }
+    private void SaveDataChannelsInfo(RFDevice device)
+    {
+        var freq = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
+        int count = 1;
+        foreach (RFChannel chan in device.Channels)
         {
-            var freq = DeviceData.Brands[device.Brand][device.Model][device.Frequency];
-            int count = 1;
-            foreach (RFChannel chan in device.Channels)
-            {
-                chan.Range = device.Range;
-                chan.Step = device.Step;
-                chan.chanNumber = count;
-                chan.SelfSpacing = freq[4];
-                chan.ThirdOrderSpacing = freq[5];
-                chan.FifthOrderSpacing = freq[6];
-                chan.SeventhOrderSpacing = freq[7];
-                chan.ThirdOrderSpacing3Tx = freq[8];
-                count++;
-            }
+            chan.Range = device.Range;
+            chan.Step = device.Step;
+            chan.chanNumber = count;
+            chan.SelfSpacing = freq[4];
+            chan.ThirdOrderSpacing = freq[5];
+            chan.FifthOrderSpacing = freq[6];
+            chan.SeventhOrderSpacing = freq[7];
+            chan.ThirdOrderSpacing3Tx = freq[8];
+            count++;
         }
-        private void AddDevice()
-        {
-            isAddingDevice = true;
-        }
+    }
+    private void AddDevice()
+    {
+        isAddingDevice = true;
+    }
     private async Task RFCalcul()
     {
         var overlappingGroups = FindOverlappingGroups();
@@ -206,6 +217,7 @@
                     chan.Checked = false;
                     if (chan.IsLocked)
                     {
+                        Debug.WriteLine("found one locked chan ! ");
                         Debug.WriteLine("We are checking: " + chan.Frequency);
                         chan.SetRandomFrequency(UsedFrequencies, TwoTX3rdOrder, TwoTX5rdOrder, TwoTX7rdOrder, TwoTX9rdOrder, ThreeTX3rdOrder);
                     }
